--- a/.github/workflows/release-vcpkg.yml
+++ b/.github/workflows/release-vcpkg.yml
@@ -31,8 +31,10 @@ jobs:
       - name: Build with CMake
         uses: lukka/run-cmake@v10
         with:
-          buildPreset: ninja-vcpkg
-          configurePreset: ninja-vcpkg
+          buildPreset: vcpkg
+          buildPresetAdditionalArgs: "['--config Release', '--clean-first']"
+          configurePreset: vcpkg
+          configurePresetAdditionalArgs: "['-G Ninja']"
 
       - name: Prepare datapack contents
         run: |
