--- a/.github/workflows/lua-check.yml
+++ b/.github/workflows/lua-check.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: leafo/gh-actions-luarocks@v4
 
       - name: Install LuaFormatter
-        run: luarocks install luaformatter
+        run: luarocks install --server=https://luarocks.org/dev luaformatter
 
       - name: Run LuaFormatter
         run: |
