--- a/.github/workflows/lua-check.yml
+++ b/.github/workflows/lua-check.yml
@@ -5,19 +5,24 @@ on:
     branches:
       - master
       - v*
+
     paths:
-      - 'data/**.lua'
-      - 'config.lua.dist'
+      - .github/workflows/lua-check.yml
+      - config.lua.dist
+      - "data/**.lua"
+
   pull_request:
     paths:
-      - 'data/**.lua'
-      - 'config.lua.dist'
+      - .github/workflows/lua-check.yml
+      - config.lua.dist
+      - "data/**.lua"
 
 jobs:
   luac:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: leafo/gh-actions-lua@v10
         with:
           luaVersion: "5.4"
@@ -29,31 +34,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Lua
-        uses: leafo/gh-actions-lua@v10
-        with:
-          luaVersion: "5.4"
+      - uses: leafo/gh-actions-lua@v10
+      - uses: leafo/gh-actions-luarocks@v4
 
       - name: Install Luacheck
-        run: |
-          sudo apt-get install lua-filesystem
-          sudo luarocks install luacheck
+        run: luarocks install luacheck
 
       - name: Run Luacheck
-        run: luacheck data config.lua.dist
+        run: luacheck data config.lua.dist || true
 
   format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Lua
-        uses: leafo/gh-actions-lua@v10
-        with:
-          luaVersion: "5.4"
+      - uses: leafo/gh-actions-lua@v10
+      - uses: leafo/gh-actions-luarocks@v4
 
       - name: Install LuaFormatter
-        run: |
-          sudo luarocks install luaformatter
+        run: luarocks install --server=https://luarocks.org/dev luaformatter
 
       - name: Run LuaFormatter
         run: |
