Use Ninja Multi-Config generator for makefiles
- Setup tests dependency install with vcpkg
- Fix preset additional args for run-cmake action

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -61,7 +61,7 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           buildPreset: default
-          buildPresetAdditionalArgs: "['--config ${{ matrix.buildtype }}']"
+          buildPresetAdditionalArgs: "['--config', '${{ matrix.buildtype }}']"
           configurePreset: default
 
       - name: Perform CodeQL Analysis
