--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -31,6 +31,9 @@ jobs:
         buildtype: [Debug, Release]
         luajit: [on, off]
 
+    env:
+      VCPKG_BUILD_TYPE: release
+
     steps:
       - uses: actions/checkout@v3
 
@@ -49,9 +52,8 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           buildPreset: vcpkg
-          buildPresetAdditionalArgs: "['--config ${{ matrix.buildtype }}', '--clean-first']"
+          buildPresetAdditionalArgs: "['--config', '${{ matrix.buildtype }}']"
           configurePreset: vcpkg
-          configurePresetAdditionalArgs: "['-G Ninja']"
 
       - name: Upload artifact binary
         uses: actions/upload-artifact@v3
