--- a/.github/workflows/release-vcpkg.yml
+++ b/.github/workflows/release-vcpkg.yml
@@ -14,6 +14,7 @@ jobs:
         os: [ubuntu, macos, windows]
 
     env:
+      VCPKG_BUILD_TYPE: release
       VCPKG_FEATURE_FLAGS: luajit
 
     steps:
@@ -30,9 +31,8 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           buildPreset: vcpkg
-          buildPresetAdditionalArgs: "['--config Release', '--clean-first']"
+          buildPresetAdditionalArgs: "['--config', 'RelWithDebInfo', '--clean-first']"
           configurePreset: vcpkg
-          configurePresetAdditionalArgs: "['-G Ninja']"
 
       - name: Prepare datapack contents
         run: |
