Adding ORIGINAL_SIGHT_CALCULATION config var

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -89,6 +89,7 @@ premiumToSendPrivate = false
 forceMonsterTypesOnLoad = true
 cleanProtectionZones = false
 checkDuplicateStorageKeys = false
+originalSightCalculation = true
 
 -- VIP and Depot limits
 -- NOTE: you can set custom limits per group in data/XML/groups.xml
