--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install dependencies
         run: >
           sudo apt update -q &&
-          sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
+          sudo apt install -yq build-essential libluajit-5.1-dev liblua5.4-dev libmysqlclient-dev
           libboost-system-dev libboost-iostreams-dev libboost-locale-dev
           libpugixml-dev libfmt-dev
 
