Move main to separate file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    env:
-      CC: gcc
-      CXX: g++
-
     steps:
       - uses: actions/checkout@v3
 
@@ -29,5 +25,5 @@ jobs:
         with:
           buildPreset: default
           configurePreset: default
-          configurePresetAdditionalArgs: "['-G Ninja', '-DENABLE_TESTING=ON']"
+          configurePresetAdditionalArgs: "['-G Ninja', '-DBUILD_TESTING=ON']"
           testPreset: default
