Encode Latin-1 to UTF-8 and vice versa
The issue at hand is that since #2403 (which addressed issue #2175),
all text in the database has been stored using UTF-8 encoding. However,
the data that comes from the client is Latin-1 encoded. This isn't
problematic as long as the characters from the client stay within the
ASCII range, as both Latin-1 and UTF-8 encode these characters the same
way. However, if we receive from the client a string of text containing
characters beyond the ASCII range (e.g., "ñññççç"), this is where data
loss occurs, resulting in the situation described by the original poster
in #4560. We end up storing in the database a set of characters that are
not UTF-8 encoded.

This commit addresses this issue by implementing explicit conversion
mechanisms to handle text encoding conversions seamlessly during data
transmission between the client and server.

The solution at hand may incur too much overhead and should be
evaluated.

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -54,7 +54,7 @@ jobs:
         run: >
           sudo apt update -q &&
           sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
-          libboost-system-dev libboost-iostreams-dev
+          libboost-system-dev libboost-iostreams-dev libboost-locale-dev
           libpugixml-dev libcrypto++-dev libfmt-dev
 
       - name: Build with cmake
