--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: >
           sudo apt update -q &&
           sudo apt install -yq git build-essential libluajit-5.1-dev libmysqlclient-dev
-          libboost-system-dev libboost-iostreams-dev libboost-test-dev
+          libboost-system-dev libboost-iostreams-dev libboost-locale-dev libboost-test-dev
           libpugixml-dev libcrypto++-dev libfmt-dev
 
       - name: Build with CMake
