Add libiconv as a vcpkg dependency
This is required in MacOS to link against Boost::locale... MacOS, am I
right? :-)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,10 @@ if (NOT FORCE_LUAJIT)
     find_package(Lua REQUIRED)
 endif ()
 
+if (APPLE)
+    find_package(Iconv REQUIRED)
+endif()
+
 find_package(Boost 1.66.0 REQUIRED COMPONENTS system iostreams locale)
 
 option(BUILD_TESTING "Build unit tests" OFF)
