--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -181,5 +181,8 @@ target_link_libraries(tfslib PRIVATE
 	${LUA_LIBRARIES}
 	${MYSQL_CLIENT_LIBS}
 	)
+if (APPLE)
+	target_link_libraries(tfslib PRIVATE Iconv::Iconv)
+endif()
 
 add_custom_target(format COMMAND /usr/bin/clang-format -style=file -i ${tfs_HDR} ${tfs_SRC} ${tfs_MAIN})
