Use OpenSSL instead of crypto++
Use OpenSSL for SHA1 hashing and RSA encryption, which is more readily
available in all systems than crypto++

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
           sudo apt update -q &&
           sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
           libboost-system-dev libboost-iostreams-dev libboost-locale-dev
-          libpugixml-dev libcrypto++-dev libfmt-dev
+          libpugixml-dev libfmt-dev
 
       - name: Build with cmake
         uses: lukka/run-cmake@v10
