--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -175,9 +175,9 @@ target_link_libraries(tfslib PRIVATE
 	Boost::system
 	Boost::locale
 	fmt::fmt
+	OpenSSL::Crypto
 	pugixml::pugixml
 	${CMAKE_THREAD_LIBS_INIT}
-	${Crypto++_LIBRARIES}
 	${LUA_LIBRARIES}
 	${MYSQL_CLIENT_LIBS}
 	)
