Run clang-format on workflow modification and dispatch

--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -8,12 +8,16 @@ on:
 
     paths:
       - .clang-format
+      - .github/workflows/clang-format.yml
       - src/**
 
   pull_request:
     paths:
       - .clang-format
+      - .github/workflows/clang-format.yml
       - src/**
+
+  workflow_dispatch:
 
 jobs:
   check-format:
