--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: sudo apt update -q && sudo apt install -yq clang-format
+        run: apt update -q && apt install -yq clang-format
 
       - name: Check code style
         run: clang-format -n -style=file --Werror src/*.{cpp,h}
