--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -23,14 +23,16 @@ jobs:
   check-format:
     runs-on: ubuntu-latest
 
-    container:
-      image: ubuntu:rolling
-
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup LLVM repository
+        run: |
+          wget -qO- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository -y 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy main'
+
       - name: Install dependencies
-        run: apt update -q && apt install -yq clang-format
+        run: sudo apt update -qq && sudo apt install -yqq clang-format
 
       - name: Check code style
         run: clang-format -n -style=file --Werror src/*.{cpp,h}
