Add HTTP server with login support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ if (DEFINED ENV{VCPKG_DEFAULT_TRIPLET} AND NOT DEFINED VCPKG_TARGET_TRIPLET)
     set(VCPKG_TARGET_TRIPLET "$ENV{VCPKG_DEFAULT_TRIPLET}" CACHE STRING "The vcpkg triplet")
 endif()
 
+option(HTTP "Enable HTTP support" ON)
+if (HTTP)
+    list(APPEND VCPKG_MANIFEST_FEATURES "http")
+endif()
+
 option(BUILD_TESTING "Build unit tests" OFF)
 if (BUILD_TESTING)
     list(APPEND VCPKG_MANIFEST_FEATURES "unit-tests")
@@ -71,6 +76,9 @@ if (APPLE)
 endif()
 
 set(BOOST_REQUIRED_COMPONENTS system iostreams locale)
+if (HTTP)
+    list(APPEND BOOST_REQUIRED_COMPONENTS json)
+endif ()
 if (BUILD_TESTING)
     list(APPEND BOOST_REQUIRED_COMPONENTS unit_test_framework)
 endif ()
@@ -81,23 +89,26 @@ include_directories(${Boost_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR} ${LUA_INCLUDE_D
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(src)
-add_executable(tfs ${tfs_MAIN})
-target_link_libraries(tfs tfslib)
-
 if (BUILD_TESTING)
     message(STATUS "Building unit tests")
     enable_testing()
-    add_subdirectory(src/tests)
 endif()
+
+# Option to disable unity builds
+option(ENABLE_UNITY_BUILD "Enable unity build" ON)
+
+add_subdirectory(src)
+add_executable(tfs ${tfs_MAIN})
+target_link_libraries(tfs tfslib)
 
 ### INTERPROCEDURAL_OPTIMIZATION ###
 cmake_policy(SET CMP0069 NEW)
 include(CheckIPOSupported)
 check_ipo_supported(RESULT result OUTPUT error)
 if (result)
-    message(STATUS "IPO / LTO enabled")
+    set(ENABLE_IPO ON)
     set_target_properties(tfs PROPERTIES INTERPROCEDURAL_OPTIMIZATION True)
+    message(STATUS "IPO / LTO enabled")
 else ()
     message(STATUS "IPO / LTO not supported: <${error}>")
 endif ()
@@ -117,11 +128,5 @@ if(NOT SKIP_GIT)
 	endif()
 endif()
 ### END  Git Version ###
-
-# Option to disable unity builds
-option(ENABLE_UNITY_BUILD "Enable unity build" ON)
-if(ENABLE_UNITY_BUILD)
-    set_target_properties(tfslib PROPERTIES UNITY_BUILD ON)
-endif()
 
 target_precompile_headers(tfs PUBLIC src/otpch.h)
