Revert "Docker Build failing (workflow) (#4696)"
This reverts commit 98c55fa5cd523b110b9f25e25058e9abe261e44a.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,11 @@ if (NOT WIN32)
 endif ()
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    add_compile_options(-fno-strict-aliasing --param=max-vartrack-size=200000)
+    add_compile_options(-fno-strict-aliasing)
 endif ()
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    add_compile_options(-Wimplicit-fallthrough -Wmove --param=max-vartrack-size=200000)
+    add_compile_options(-Wimplicit-fallthrough -Wmove)
 endif ()
 
 # Find packages.
