--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,10 @@ on:
     tags:
       - v*
 
+  pull_request:
+    branches:
+      - master
+
 env:
   IMAGE_NAME: forgottenserver
 
@@ -41,7 +45,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v5
-        if: github.ref_type == 'branch'
+        if: github.event_name == 'pull_request' || github.ref_type == 'branch'
         with:
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: forgottenserver:latest
