--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,11 +44,11 @@ jobs:
         if: github.ref_type == 'tag'
         with:
           push: true
-          tags: ghcr.io/forgottenserver:${{ github.ref_name }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
         if: github.event_name == 'pull_request' || github.ref_type == 'branch'
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/forgottenserver:latest
+          tags: ghcr.io/${{ github.repository }}:latest
