Simplify logic to select Lua interpreter (#4576)
* Don't install libiconv outside OSX, install Lua by default

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install dependencies
         run: >
           sudo apt update -q &&
-          sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
+          sudo apt install -yq build-essential libluajit-5.1-dev liblua5.4-dev libmysqlclient-dev
           libboost-system-dev libboost-iostreams-dev libboost-locale-dev
           libpugixml-dev libfmt-dev
 
@@ -63,7 +63,7 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           buildPreset: default
-          buildPresetAdditionalArgs: "['--config', '${{ matrix.buildtype }}']"
+          buildPresetAdditionalArgs: "['--config', '${{ matrix.buildtype }}', '-DUSE_LUAJIT=${{ matrix.luajit }}']"
           configurePreset: default
 
       - name: Perform CodeQL Analysis
@@ -75,5 +75,5 @@ jobs:
       - name: Upload artifact binary
         uses: actions/upload-artifact@v4
         with:
-          name: tfs-ubuntu-${{ matrix.buildtype }}-luajit=on-${{ github.sha }}
-          path: ${{ runner.workspace }}/build/tfs
+          name: tfs-ubuntu-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
+          path: ${{ runner.workspace }}/build/${{ matrix.buildtype }}/tfs
