--- a/config.lua.dist
+++ b/config.lua.dist
@@ -25,6 +25,8 @@ bindOnlyGlobalAddress = false
 loginProtocolPort = 7171
 gameProtocolPort = 7172
 statusProtocolPort = 7171
+httpPort = 8080
+httpWorkers = 1
 maxPlayers = 0
 onePlayerOnlinePerAccount = true
 allowClones = false
