--- a/vc17/theforgottenserver.vcxproj
+++ b/vc17/theforgottenserver.vcxproj
@@ -188,6 +188,13 @@
     <ClCompile Include="..\src\guild.cpp" />
     <ClCompile Include="..\src\house.cpp" />
     <ClCompile Include="..\src\housetile.cpp" />
+    <ClCompile Include="..\src\http\cacheinfo.cpp" />
+    <ClCompile Include="..\src\http\error.cpp" />
+    <ClCompile Include="..\src\http\http.cpp" />
+    <ClCompile Include="..\src\http\listener.cpp" />
+    <ClCompile Include="..\src\http\login.cpp" />
+    <ClCompile Include="..\src\http\router.cpp" />
+    <ClCompile Include="..\src\http\session.cpp" />
     <ClCompile Include="..\src\inbox.cpp" />
     <ClCompile Include="..\src\iologindata.cpp" />
     <ClCompile Include="..\src\iomap.cpp" />
@@ -278,6 +285,13 @@
     <ClInclude Include="..\src\guild.h" />
     <ClInclude Include="..\src\house.h" />
     <ClInclude Include="..\src\housetile.h" />
+    <ClInclude Include="..\src\http\cacheinfo.h" />
+    <ClInclude Include="..\src\http\error.h" />
+    <ClInclude Include="..\src\http\http.h" />
+    <ClInclude Include="..\src\http\listener.h" />
+    <ClInclude Include="..\src\http\login.h" />
+    <ClInclude Include="..\src\http\router.h" />
+    <ClInclude Include="..\src\http\session.h" />
     <ClInclude Include="..\src\inbox.h" />
     <ClInclude Include="..\src\iologindata.h" />
     <ClInclude Include="..\src\iomap.h" />
