--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -45,7 +45,7 @@ jobs:
           languages: cpp
           # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
           queries: +security-extended,security-and-quality
-        if: ${{ matrix.os }} == "ubuntu" && ${{ matrix.buildtype }} == "Debug"
+        if: matrix.os == "ubuntu" && matrix.buildtype == "Debug"
 
       - name: Get latest CMake
         # Using 'latest' branch, the latest CMake is installed.
@@ -66,7 +66,7 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:cpp"
-        if: ${{ matrix.os }} == "ubuntu" && ${{ matrix.buildtype }} == "Debug"
+        if: matrix.os == "ubuntu" && matrix.buildtype == "Debug"
 
       - name: Upload artifact binary
         uses: actions/upload-artifact@v4
