--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,15 +105,12 @@ add_executable(tfs ${tfs_MAIN})
 target_link_libraries(tfs tfslib)
 
 ### INTERPROCEDURAL_OPTIMIZATION ###
-cmake_policy(SET CMP0069 NEW)
 include(CheckIPOSupported)
 check_ipo_supported(RESULT result OUTPUT error)
 if (result)
-    set(ENABLE_IPO ON)
-    set_target_properties(tfs PROPERTIES INTERPROCEDURAL_OPTIMIZATION True)
-    message(STATUS "IPO / LTO enabled")
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 else ()
-    message(STATUS "IPO / LTO not supported: <${error}>")
+    message(STATUS "IPO is not supported: ${error}")
 endif ()
 ### END INTERPROCEDURAL_OPTIMIZATION ###
 
